calculationPeriodTypeRules APIS Done
